--- a/public/style.css
+++ b/public/style.css
@@ -1,8 +1,14 @@
 .logo {
-  width: 50px;
-  height: 50px;
+    width: 50px;
+    height: 50px;
 }
 
-.red-quote{
-  color: red;
+.red-quote {
+    color: red;
+}
+
+.cat {
+    list-style: none;
+    color: darkred;
+    font-family: "Arial Black";
 }
